# DeReel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.antigravitycli/: 65b18d69-f48f-42b8-91cd-b89c4203e14a.json
.claude/: settings.local.json
.github/workflows/: crawl.yml  crawl_price.yml  crawl_stock.yml
config/: games.yaml  shopping.yaml  stock.yaml  targets.yaml
data/: apple_refurb_alerts.json  apple_refurb_state.json  crawl_schedule.json  epic_alerts.json  epic_state.json  gog_alerts.json  gog_state.json  steam_alerts.json  steam_state.json
dereel/: run.py
dereel/core/: alert_history.py  base_crawler.py  base_storage.py  comparator.py  notifier.py  settings.py  storage.py
dereel/crawlers/: apple_refurb.py  epic.py  gog.py  steam.py
dereel/models/: __init__.py  price_result.py  stock_result.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  CRAWLING_STRATEGY.md  DATA_SCHEMA.md  DEPLOYMENT.md  DEV_SETUP.md  FEATURES.md  HOW_TO_ADD_CRAWLER.md  NFR.md  NOTIFICATION_SPEC.md  PRD.md  RUNBOOK.md  TARGETS_GUIDE.md
docs/blog/: dereel-1a-github-actions-크롤링-봇.mdx  dereel-1b-steam-gog-epic-가격-감시.mdx
tests/crawlers/: test_apple_refurb.py  test_epic.py  test_gog.py  test_steam.py
tests/scripts/: find_gog_product_ids.py
